--- a/front/src/app/pages/home/home.component.scss
+++ b/front/src/app/pages/home/home.component.scss
@@ -1,7 +1,61 @@
 .center {
-  height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+  min-height: 80vh;
+  text-align: center;
+  padding: 1rem;
+  
+  .logo {
+    width: 140px;
+    margin-bottom: 1.5rem;
+  }
+  
+  h1 {
+    font-size: 2rem;
+    margin-bottom: 2rem;
+    color: #333;
+    font-weight: 500;
+  }
+  
+  .action-buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    
+    button {
+      min-width: 180px;
+      min-height: 45px;
+      border-radius: 22px;
+    }
+    
+    .auth-buttons {
+      display: flex;
+      flex-direction: row;
+      gap: 1rem;
+      margin-top: 0.5rem;
+      
+      @media (max-width: 599px) {
+        flex-direction: column;
+      }
+    }
+  }
+}
+
+@media (min-width: 600px) {
+  .center {
+    .logo {
+      width: 180px;
+    }
+    
+    h1 {
+      font-size: 2.5rem;
+    }
+    
+    button {
+      min-width: 200px;
+    }
+  }
 }
