--- a/front/src/app/features/auth/login/login.component.scss
+++ b/front/src/app/features/auth/login/login.component.scss
@@ -1,14 +1,20 @@
 .login-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   max-width: 500px;
   margin: 0 auto;
   padding: 2rem 1rem;
-
+  position: relative;
+  
   @media (min-width: 600px) {
     padding: 2rem;
   }
+}
+
+.back-button {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
 }
 
 .login-header {
@@ -17,15 +23,15 @@
   align-items: center;
   margin-bottom: 2rem;
   width: 100%;
-
+  
   .logo {
     height: 60px;
     margin-bottom: 1rem;
   }
-
+  
   h1 {
     font-weight: 500;
-    margin-bottom: 0;
+    margin-bottom: 1rem;
     color: #333;
   }
 }
@@ -34,28 +40,52 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-
-  mat-form-field {
+  
+  .form-field {
     width: 100%;
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
+    
+    label {
+      display: block;
+      margin-bottom: 0.5rem;
+      font-size: 0.9rem;
+      color: #666;
+    }
+    
+    input {
+      width: 100%;
+      padding: 0.8rem;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 1rem;
+      
+      &:focus {
+        outline: none;
+        border-color: #673AB7;
+      }
+    }
+    
+    .error-message {
+      color: #f44336;
+      font-size: 0.8rem;
+      margin-top: 0.3rem;
+    }
   }
-
+  
   .login-button {
-    height: 48px;
-    font-size: 16px;
+    height: 42px;
+    font-size: 1rem;
     margin: 1rem 0;
-    border-radius: 24px;
+    border-radius: 21px;
     background-color: #673AB7;
-  }
-}
-
-.register-section {
-  margin-top: 2rem;
-  text-align: center;
-
-  p {
-    color: #666;
-    margin-bottom: 0.5rem;
+    color: white;
+    border: none;
+    cursor: pointer;
+    
+    &:disabled {
+      background-color: #b39ddb;
+      cursor: not-allowed;
+    }
   }
 }
 
@@ -63,11 +93,5 @@
 @media (max-width: 599px) {
   .login-container {
     padding: 1rem;
-  }
-
-  .login-form {
-    .login-button {
-      width: 100%;
-    }
   }
 }
