--- a/front/src/app/features/auth/register/register.component.html
+++ b/front/src/app/features/auth/register/register.component.html
@@ -11,46 +11,29 @@
   </div>
 
   <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="register-form">
-    <mat-form-field appearance="outline">
-      <mat-label>Nom d'utilisateur</mat-label>
-      <input matInput formControlName="firstName" required>
-      <mat-error *ngIf="registerForm.get('firstName')?.hasError('required')">
+    <div class="form-field">
+      <label for="username">Nom d'utilisateur</label>
+      <input id="username" formControlName="username" required>
+      <div class="error-message" *ngIf="registerForm.get('username')?.invalid && registerForm.get('username')?.touched">
         Le nom d'utilisateur est requis
-      </mat-error>
-    </mat-form-field>
+      </div>
+    </div>
 
-    <mat-form-field appearance="outline">
-      <mat-label>Nom de famille</mat-label>
-      <input matInput formControlName="lastName" required>
-      <mat-error *ngIf="registerForm.get('lastName')?.hasError('required')">
-        Le nom de famille est requis
-      </mat-error>
-    </mat-form-field>
+    <div class="form-field">
+      <label for="email">Adresse e-mail</label>
+      <input id="email" formControlName="email" type="email" required>
+      <div class="error-message" *ngIf="registerForm.get('email')?.invalid && registerForm.get('email')?.touched">
+        L'email est requis avec un format valide
+      </div>
+    </div>
 
-    <mat-form-field appearance="outline">
-      <mat-label>Adresse e-mail</mat-label>
-      <input matInput formControlName="email" type="email" required>
-      <mat-error *ngIf="registerForm.get('email')?.hasError('required')">
-        L'email est requis
-      </mat-error>
-      <mat-error *ngIf="registerForm.get('email')?.hasError('email')">
-        Format d'email invalide
-      </mat-error>
-    </mat-form-field>
-
-    <mat-form-field appearance="outline">
-      <mat-label>Mot de passe</mat-label>
-      <input matInput formControlName="password" [type]="hidePassword ? 'password' : 'text'" required>
-      <button type="button" mat-icon-button matSuffix (click)="hidePassword = !hidePassword">
-        <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
-      </button>
-      <mat-error *ngIf="registerForm.get('password')?.hasError('required')">
-        Le mot de passe est requis
-      </mat-error>
-      <mat-error *ngIf="registerForm.get('password')?.hasError('minlength')">
+    <div class="form-field">
+      <label for="password">Mot de passe</label>
+      <input id="password" formControlName="password" [type]="hidePassword ? 'password' : 'text'" required>
+      <div class="error-message" *ngIf="registerForm.get('password')?.invalid && registerForm.get('password')?.touched">
         Le mot de passe doit contenir au moins 6 caractères
-      </mat-error>
-    </mat-form-field>
+      </div>
+    </div>
 
     <button mat-raised-button color="primary" type="submit" [disabled]="registerForm.invalid || isLoading" class="register-button">
       S'inscrire
