--- a/front/src/app/features/auth/register/register.component.scss
+++ b/front/src/app/features/auth/register/register.component.scss
@@ -1,7 +1,6 @@
 .register-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
   max-width: 500px;
   margin: 0 auto;
   padding: 1rem;
@@ -32,7 +31,7 @@
 
   h1 {
     font-weight: 500;
-    margin-bottom: 0;
+    margin-bottom: 1rem;
     color: #333;
   }
 }
@@ -41,18 +40,52 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-
-  mat-form-field {
+  
+  .form-field {
     width: 100%;
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
+    
+    label {
+      display: block;
+      margin-bottom: 0.5rem;
+      font-size: 0.9rem;
+      color: #666;
+    }
+    
+    input {
+      width: 100%;
+      padding: 0.8rem;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 1rem;
+      
+      &:focus {
+        outline: none;
+        border-color: #673AB7;
+      }
+    }
+    
+    .error-message {
+      color: #f44336;
+      font-size: 0.8rem;
+      margin-top: 0.3rem;
+    }
   }
-
+  
   .register-button {
-    height: 48px;
-    font-size: 16px;
+    height: 42px;
+    font-size: 1rem;
     margin: 1rem 0;
-    border-radius: 24px;
+    border-radius: 21px;
     background-color: #673AB7;
+    color: white;
+    border: none;
+    cursor: pointer;
+    
+    &:disabled {
+      background-color: #b39ddb;
+      cursor: not-allowed;
+    }
   }
 }
 
@@ -63,6 +96,10 @@
   }
 
   .register-form {
+    .form-field {
+      margin-bottom: 1rem;
+    }
+    
     .register-button {
       width: 100%;
     }
