--- a/front/src/styles/styles.scss
+++ b/front/src/styles/styles.scss
@@ -2,3 +2,11 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+:root {
+  --primary-color: #673AB7;
+  --accent-color: #FFC107;
+  --warn-color: #f44336;
+  --text-color: #333333;
+  --background-color: #FFFFFF;
+}
