--- a/front/src/app/features/auth/login/login.component.html
+++ b/front/src/app/features/auth/login/login.component.html
@@ -6,7 +6,6 @@
   </div>
 
   <div class="login-header">
-    <img src="/assets/logo_p6.png" alt="MDD Logo" class="logo"/>
     <h1>Se connecter</h1>
   </div>
 
@@ -27,7 +26,7 @@
       </div>
     </div>
 
-    <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid || isLoading" class="login-button">
+    <button mat-raised-button type="submit" [disabled]="loginForm.invalid || isLoading" class="login-button">
       Se connecter
     </button>
   </form>
