--- a/front/src/app/features/auth/register/register.component.scss
+++ b/front/src/app/features/auth/register/register.component.scss
@@ -24,11 +24,6 @@
   margin-bottom: 2rem;
   width: 100%;
 
-  .logo {
-    height: 60px;
-    margin-bottom: 1rem;
-  }
-
   h1 {
     font-weight: 500;
     margin-bottom: 1rem;
@@ -40,48 +35,48 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  
+
   .form-field {
     width: 100%;
     margin-bottom: 1.5rem;
-    
+
     label {
       display: block;
       margin-bottom: 0.5rem;
       font-size: 0.9rem;
       color: #666;
     }
-    
+
     input {
       width: 100%;
       padding: 0.8rem;
       border: 1px solid #ccc;
       border-radius: 4px;
       font-size: 1rem;
-      
+
       &:focus {
         outline: none;
         border-color: #673AB7;
       }
     }
-    
+
     .error-message {
       color: #f44336;
       font-size: 0.8rem;
       margin-top: 0.3rem;
     }
   }
-  
+
   .register-button {
     height: 42px;
     font-size: 1rem;
     margin: 1rem 0;
     border-radius: 21px;
-    background-color: #673AB7;
+    background-color: var(--primary-color);
     color: white;
     border: none;
     cursor: pointer;
-    
+
     &:disabled {
       background-color: #b39ddb;
       cursor: not-allowed;
@@ -99,7 +94,7 @@
     .form-field {
       margin-bottom: 1rem;
     }
-    
+
     .register-button {
       width: 100%;
     }
