--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -22,6 +22,7 @@
         mat-icon-button
         routerLink="/profile"
         class="profile-btn"
+        aria-label="Ouvrir le profil"
       >
         <mat-icon>account_circle</mat-icon>
       </button>
