--- a/front/src/app/app.component.scss
+++ b/front/src/app/app.component.scss
@@ -40,10 +40,11 @@
     margin-left: 8px;
 
     .mat-icon {
-      font-size: 24px;
-      height: 24px;
-      width: 24px;
       color: #e0e0e0;
+      font-size: 36px;
+      height: 36px;
+      width: 36px;
+      line-height: 36px;
     }
   }
 }
