--- a/front/src/app/features/posts/create-post/create-post.component.scss
+++ b/front/src/app/features/posts/create-post/create-post.component.scss
@@ -24,6 +24,15 @@
   }
 }
 
+.error-message {
+  background-color: #ffebee;
+  color: #d32f2f;
+  padding: 12px;
+  border-radius: 4px;
+  margin-bottom: 1rem;
+  border: 1px solid #ffcdd2;
+}
+
 .create-post-form {
   display: flex;
   flex-direction: column;
@@ -37,7 +46,7 @@
     width: 100%;
   }
 
-  .theme-input {
+  .theme-select {
     width: 100%;
   }
 
@@ -62,25 +71,6 @@
         background-color: #b39ddb;
         cursor: not-allowed;
       }
-    }
-  }
-}
-
-// Styles pour l'autocomplétion des thèmes
-::ng-deep .mat-autocomplete-panel {
-  max-height: 200px !important;
-
-  .mat-option {
-    font-size: 14px;
-    height: 36px;
-    line-height: 36px;
-
-    &.mat-selected {
-      color: var(--primary-color);
-    }
-
-    &:hover {
-      background-color: rgba(121, 80, 221, 0.05);
     }
   }
 }
