--- a/front/src/app/features/posts/post-item/post-item.component.html
+++ b/front/src/app/features/posts/post-item/post-item.component.html
@@ -8,6 +8,6 @@
   </div>
   
   <div class="post-content">
-    <p>{{ post.content | slice:0:150 }}{{ post.content.length > 150 ? '...' : '' }}</p>
+    <p>{{ post.content }}</p>
   </div>
 </div>
