maj responsive page d'inscription et de connexion + page détails d'un article. modif sur la fonction de tri pour proposer quelque chose quand meme

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -79,7 +79,7 @@
   </div>
 </mat-toolbar>
 
-<!-- Navbar simplifiée pour les pages d'authentification -->
+<!-- Navbar simplifiée pour les pages d'authentification (desktop seulement) -->
 <mat-toolbar *ngIf="isAuthPage" class="auth-toolbar">
   <div class="toolbar-container">
     <div class="logo-container">
